# bazel-lsp

./: .gitignore  Cargo.toml  LICENSE
src/: bazel.rs  lib.rs  main.rs  parser.rs  server.rs  target_trie.rs
tests/: bazel_tests.rs  code_lens_tests.rs  completion_tests.rs  formatting_tests.rs  parser_test.rs  semantic_tokens_tests.rs  trie_tests.rs
