[package]
name = "bazel-lsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "bazel_lsp"
path = "src/lib.rs"

[[bin]]
name = "bazel-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
anyhow = "1.0"
url = "2.5"
serde_json = "1.0"
tree-sitter = "0.25.3"
tree-sitter-starlark = "1.3"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
tempfile = "3.8"

#[build-dependencies]
#tree-sitter-cli = "0.20"